--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def resize_image(image, A):\n",
+    "def apply_transform(image, A):\n",
     "    import numpy as np\n",
     "\n",
     "    image_ = np.zeros_like(image)\n",
@@ -53,12 +53,39 @@
     "\n",
     "    image_[Xd[0,:], Xd[1,:], :] = image[X[0,:], X[1,:], :]\n",
     "    \n",
-    "    return image_"
+    "    return image_\n",
+    "\n",
+    "\n",
+    "def resize_image_matrix(image, width, height):\n",
+    "    \n",
+    "    tw_image = width / image.shape[1]\n",
+    "    th_image = height / image.shape[0]\n",
+    "\n",
+    "    return np.array([\n",
+    "        [th_image, 0, 0], \n",
+    "        [0, tw_image, 0], \n",
+    "        [0, 0, 1]\n",
+    "    ])\n",
+    "    \n",
+    "def translate_image_matrix(x, y):\n",
+    "    return np.array([\n",
+    "        [1, 0, y], \n",
+    "        [0, 1, x], \n",
+    "        [0, 0, 1]\n",
+    "    ])\n",
+    "    \n",
+    "def rotate_image_matrix(deg):\n",
+    "    \n",
+    "    return np.array([\n",
+    "        [np.cos(np.radians(deg)), -np.sin(np.radians(deg)), 0], \n",
+    "        [np.sin(np.radians(deg)), np.cos(np.radians(deg)), 0], \n",
+    "        [0, 0,1]\n",
+    "    ])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +108,6 @@
     "# Read the image\n",
     "image = mpimg.imread(\"C:/Users/jalfr/OneDrive/Desktop/MASP/Code/Test/bounding_box/bounding_box_test/img/WEB_JB_MASP_00112_01.jpg\")\n",
     "\n",
-    "\n",
     "fundo = mpimg.imread(\"C:/Users/jalfr/OneDrive/Desktop/MASP/Code/Test/bounding_box/bounding_box_test/img/6R0A8419.jpg\")\n",
     "\n",
     "height = image.shape[0]\n",
@@ -99,18 +125,10 @@
     "])\n",
     "\n",
     "\n",
-    "image_ = resize_image(image, A)\n",
+    "image_ = apply_transform(image, A)\n",
     "\n",
-    "tw_fundo = width / fundo.shape[1]\n",
-    "th_fundo = height / fundo.shape[0]\n",
     "\n",
-    "B = np.array([\n",
-    "    [th_fundo, 0, 0], \n",
-    "    [0, tw_fundo, 0], \n",
-    "    [0, 0, 1]\n",
-    "])\n",
-    "\n",
-    "fundo= resize_image(fundo, B)\n",
+    "fundo= apply_transform(fundo, resize_image_matrix(fundo, width, height))\n",
     "\n",
     "\n",
     "for i in range(image_.shape[0]):\n",
@@ -160,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
